--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
                   android:label="@string/title_set_date_time">
         </activity>
 
-        <activity android:name=".activity.fragments.SettingListUserPhonesFragment"/>
+        <activity android:name=".activity.fragments.SettingListUserPhones"/>
 
         <activity android:name=".activity.fragments.SetUserPhone"/>
      </application>
