Начадо работы над управлением реле. Создан массив режимов работы реле. Созданы фрагменты: основной экран -  relay_view, экран для установки режимов работы отдельного реле - set_relay_basic, list_control_mode_fragment - для выбора непосредственно ражима управления

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.fragments.SetDateTimeFragment"
+        <activity android:name=".activity.fragments.SetDateTime"
                   android:label="@string/title_set_date_time">
         </activity>
 
