--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,5 +25,5 @@
 
         <activity android:name=".activity.fragments.SetUserPhone"/>
      </application>
-
+    <uses-permission android:name="android.permission.SEND_SMS"/>
 </manifest>
