--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.cottagealarmandroid.app" >
 
     <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -28,7 +29,8 @@
         <service
                 android:name=".service.SmsService"
                 android:enabled="true"
-                android:exported="true">
+                android:exported="true"
+                android:process=":smsRelay">
         </service>
     </application>
 
