--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,15 @@
     package="com.example.cottagealarmandroid.app" >
 
     <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <receiver android:name=".SmsReceiver">
+        <intent-filter android:priority="100">
+            <action android:name=
+                            "android.provider.Telephony.SMS_RECEIVED" />
+        </intent-filter>
+    </receiver>
 
     <application
         android:allowBackup="true"
